--- a/Python/Cheat Sheet.ipynb
+++ b/Python/Cheat Sheet.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,24 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Positive\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "Python\n",
-      "0\n",
-      "1\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if x > 0:\n",
     "    print(\"Positive\")\n",
@@ -122,17 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, John!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def greet(name=\"User\"):\n",
     "    return f\"Hello, {name}!\"\n",
@@ -384,22 +361,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "22 - Web Scraping with Beautiful Soup"
+    "22 - Web Scraping with Beautiful Soup  (pip install beautifulsoup4 ; pip install requests)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Example Domain\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
@@ -419,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,18 +409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: division by zero\n",
-      "This block always executes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    result = 10 / 0\n",
@@ -469,12 +429,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "31Working with Sets"
+    "31 - Working with Sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +448,12 @@
     "intersection_set = set1 & set2\n",
     "\n",
     "# Difference\n",
-    "difference_set = set1 - set2"
+    "difference_set = set1 - set2\n",
+    "\n",
+    "\n",
+    "print(union_set)\n",
+    "print(intersection_set)\n",
+    "print(difference_set)"
    ]
   }
  ],
