--- a/Python/Learn Python with notebooks/22_for_overview.ipynb
+++ b/Python/Learn Python with notebooks/22_for_overview.ipynb
@@ -114,10 +114,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 For loop through *indeces* and *elements* \n",
+    "### 2.3 For loop through *indices* and *elements* \n",
     "\n",
     "\n",
-    "- Capitalize each string using a for loop through and *indeces and elements*:"
+    "- Capitalize each string using a for loop through and *indices and elements*:"
    ]
   },
   {
@@ -254,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
