--- a/Python/Learn Python with notebooks/25_dictionary_list.ipynb
+++ b/Python/Learn Python with notebooks/25_dictionary_list.ipynb
@@ -41,17 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cities': ['Bern', 'Lucern'], 'food': ['chocolate', 'raclette']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tips[\"cities\"] = [\"Bern\", \"Lucern\"]\n",
     "tips[\"food\"]   = [\"chocolate\", \"raclette\"]\n",
@@ -67,17 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cities': ['Bern', 'Lucern', 'Lugano'], 'food': ['chocolate', 'raclette']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tips[\"cities\"].append(\"Lugano\")\n",
     "print (tips)\n",
@@ -86,17 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cities': ['Bern', 'Lucern', 'Lugano', 'Geneva'], 'food': ['chocolate', 'raclette']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tips[\"cities\"] += [\"Geneva\"]\n",
     "print (tips)\n",
@@ -105,17 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cities': ['Bern', 'Lucern', 'Lugano', 'Geneva'], 'food': ['chocolate', 'raclette', 'onion tarte']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tips.get(\"food\").append(\"onion tarte\")\n",
     "print (tips)\n",
@@ -124,17 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cities': ['Bern', 'Lucern', 'Lugano', 'Geneva'], 'food': ['chocolate', 'raclette', 'onion tarte', 'fondue']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tips[\"food\"] = tips.get(\"food\") + [\"fondue\"]\n",
     "print (tips)\n",
@@ -150,18 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cities ['Bern', 'Lucern', 'Lugano', 'Geneva']\n",
-      "food ['chocolate', 'raclette', 'onion tarte', 'fondue']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k,v in tips.items():\n",
     "    print (k,v)"
@@ -176,59 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cities: ['Bern', 'Lucern', 'Lugano', 'Geneva']\n",
-      "  food: ['chocolate', 'raclette', 'onion tarte', 'fondue']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k,v in tips.items():\n",
     "    print (\"{:>6}: {}\".format(k,v))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -264,17 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'summer': ['diving', 'swimming'], 'winter': ['alpine skiing', 'figure skeating']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "olympic_games[\"summer\"] = [\"diving\", \"swimming\"]\n",
     "olympic_games[\"winter\"] = [\"alpine skiing\", \"figure skeating\"]\n",
@@ -290,21 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'summer': ['diving', 'swimming', 'rowing'],\n",
-       " 'winter': ['alpine skiing', 'figure skeating']}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using [] and .append() (syntax 1)\n",
     "olympic_games[\"summer\"].append(\"rowing\")\n",
@@ -313,17 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'summer': ['diving', 'swimming', 'rowing', 'sailing'], 'winter': ['alpine skiing', 'figure skeating']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using [] and list concatenation (syntax 2)\n",
     "olympic_games[\"summer\"] += [\"sailing\"]\n",
@@ -332,17 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'summer': ['diving', 'swimming', 'rowing', 'sailing'], 'winter': ['alpine skiing', 'figure skeating', 'snowboad']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using get and .append() (syntax 3)\n",
     "olympic_games.get(\"winter\").append(\"snowboad\")\n",
@@ -351,17 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'summer': ['diving', 'swimming', 'rowing', 'sailing'], 'winter': ['alpine skiing', 'figure skeating', 'snowboad', 'bobsleigh']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using get and list concatenation (syntax 4)\n",
     "olympic_games[\"winter\"] = olympic_games.get(\"winter\") + [\"bobsleigh\"]\n",
@@ -377,18 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "->  summer ['diving', 'swimming', 'rowing', 'sailing']\n",
-      "->  winter ['alpine skiing', 'figure skeating', 'snowboad', 'bobsleigh']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k,v in olympic_games.items():\n",
     "    print (\"-> \",k,v)"
@@ -396,18 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              summer: ['diving', 'swimming', 'rowing', 'sailing']\n",
-      "              winter: ['alpine skiing', 'figure skeating', 'snowboad', 'bobsleigh']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k,v in olympic_games.items(): \n",
     "    print (\"{:>20}: {}\".format(k,v))"
@@ -422,18 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['diving', 'swimming', 'rowing', 'sailing']\n",
-      "['alpine skiing', 'figure skeating', 'snowboad', 'bobsleigh']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for v in olympic_games.values():\n",
     "    print (v)"
@@ -473,17 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'basic': ['Paul', 'Laura'], 'advanced': ['Mohammed', 'Geetha', 'Maria']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "students[\"basic\"]    = [\"Paul\", \"Laura\"]\n",
     "students[\"advanced\"] = [\"Mohammed\", \"Geetha\", \"Maria\"]\n",
@@ -499,21 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'basic': ['Paul', 'Laura', 'Tom'],\n",
-       " 'advanced': ['Mohammed', 'Geetha', 'Maria']}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using [] and .append() (syntax 1)\n",
     "students[\"basic\"].append(\"Tom\")\n",
@@ -522,17 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'basic': ['Paul', 'Laura', 'Tom', 'Juhee'], 'advanced': ['Mohammed', 'Geetha', 'Maria']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using [] and list concatenation (syntax 2)\n",
     "students[\"basic\"] += [\"Juhee\"]\n",
@@ -541,17 +347,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'basic': ['Paul', 'Laura', 'Tom', 'Juhee'], 'advanced': ['Mohammed', 'Geetha', 'Maria', 'Matt']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using get and .append() (syntax 3)\n",
     "students.get(\"advanced\").append(\"Matt\")\n",
@@ -560,17 +358,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'basic': ['Paul', 'Laura', 'Tom', 'Juhee', 'Marc'], 'advanced': ['Mohammed', 'Geetha', 'Maria', 'Matt']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using get and list concatenation (syntax 4)\n",
     "students[\"basic\"] = students.get(\"basic\") + [\"Marc\"]\n",
@@ -586,17 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'basic': ['Paul', 'Tom', 'Juhee', 'Marc'], 'advanced': ['Mohammed', 'Geetha', 'Maria', 'Matt', 'Laura']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "students[\"basic\"].remove(\"Laura\")\n",
     "students[\"advanced\"].append(\"Laura\")\n",
@@ -612,18 +394,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-> basic ['Paul', 'Tom', 'Juhee', 'Marc']\n",
-      "-> advanced ['Mohammed', 'Geetha', 'Maria', 'Matt', 'Laura']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k,v in students.items():\n",
     "    print (\"->\",k,v)"
@@ -631,18 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   basic: ['Paul', 'Tom', 'Juhee', 'Marc']\n",
-      "advanced: ['Mohammed', 'Geetha', 'Maria', 'Matt', 'Laura']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k,v in students.items():\n",
     "    print (\"{:>8}: {}\".format(k,v))"
@@ -657,18 +421,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "basic\n",
-      "advanced\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k in students.keys():\n",
     "    print (k)"
@@ -684,7 +439,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -698,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
